rm tests for removed methods